# Http

./: .codeqlignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  License  README.md  RFCs.md  codeqlBuildScript.sh
.github/: codeql-config.yml
.github/workflows/: cmake-multi-platform.yml  code-coverage.yml  codeql-advanced.yml  codeql.yml  defender-for-devops.yml  dependency-review.yml  msvc.yml  ossar.yml  osv-scanner.yml  scorecard.yml
CMake/: FindLibreSSL.cmake
client/: http-client-linux.h  http-client-win64.h  http-client.cpp  http-client.h
common/: CMakeLists.txt  common.cpp  http.cpp  http.h
common/include/: ContentTypes.h  HttpBase.h  HttpHeaders.h
scripts/: debug_build_test_coverage.sh
server/: http-server.cpp  http-server.h
tests/: CMakeLists.txt  httptests.cpp
